try to fix the color handlers, i don't think it worked

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -24,7 +24,7 @@ displayURL="http://example.com/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="examplemod.png" #optional
 # A text field displayed in the mod UI
-credits="By Tessa Laurijssens" #optional
+credits="By SuperSuccubus" #optional
 # A text field displayed in the mod UI
 authors="Tessa" #optional
 # The description text for the mod (multi line!) (#mandatory)
@@ -33,7 +33,7 @@ Do you want to experience the nostalgia of Maplestory once more in the still bel
 The Minecraft: Big Bang Update adds a whole bunch of Maplestory monsters, items, gear and more to Minecraft for you to explore and collect.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.examplemod]] #optional
+[[dependencies.thebigbang]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
@@ -43,11 +43,4 @@ The Minecraft: Big Bang Update adds a whole bunch of Maplestory monsters, items,
     # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
-    side="BOTH"
-# Here's another dependency
-[[dependencies.examplemod]]
-    modId="minecraft"
-    mandatory=true
-    versionRange="[1.15.2]"
-    ordering="NONE"
     side="BOTH"
